<resources>
    <string name="app_name">ButtonsApp</string>
    <string name="togglebutton_onoff_label">ToggleButton</string>
    <string name="radiobutton_medium_label">Medium</string>
    <string name="radiobutton_small_label">Small</string>
    <string name="radiobutton_large_label">Large</string>
    <string name="checkbox_good_label">Good</string>
    <string name="checkbox_regular_label">Regular</string>
    <string name="checkbox_bad_label">Bad</string>
    <string name="toggle_deactivate_label">Desactivar</string>
    <string name="toggle_activate_label">Activar</string>
    <string name="switch_label">Switch</string>
    <string name="name_label">Name</string>
    <string name="email_label">emails</string>
    <string name="button_label">Open new Activity</string>
    <string name="switch_off_label">OFF</string>
    <string name="switch_on_label">ON</string>
</resources>
